Updated monocle version for Java 11.